NXP-17990: Fix alignment of remove icons in tags

--- a/nuxeo-features/nuxeo-platform-ui-select2/src/main/resources/themes/sass/nuxeo-select2.scss
+++ b/nuxeo-features/nuxeo-platform-ui-select2/src/main/resources/themes/sass/nuxeo-select2.scss
@@ -101,13 +101,14 @@
 
 .nx-page .select2-container-multi .select2-choices .select2-search-choice,
 .nx-page .select2-container.select2-container-disabled .select2-choice > .select2-chosen {
-  background: #eee none;
-  border: medium none;
+  background: $shade-light-30 none;
+  border: 0;
   border-radius: 16px;
   box-shadow: none;
   display: inline-block;
+  height: 24px;
   margin: .2em .3em .3em 0;
-  padding: .3em 1.7em .4em 1em;
+  padding: .4em 1.7em .4em 1em;
 }
 
 .nx-page .select2-container.select2-container-disabled .select2-choice > .select2-chosen {
@@ -117,12 +118,11 @@
 .nx-page .select2-container-multi .select2-search-choice-close {
   left: auto;
   right: 6px;
-  top: 8px;
+  top: 6px;
 }
 
 .nx-page .s2newTag {
   display: inline-block;
-  padding: .2em 0;
 }
 
 .nx-page .select2-drop,
@@ -157,7 +157,7 @@
 // Customize readonly mode used for view mode
 .nx-page div.select2-container-disabled > a.select2-choice,
 .nx-page div.select2-container-disabled > ul.select2-choices {
-  background: none repeat scroll 0 0 transparent;
+  background: 0;
   border: 0;
   box-shadow: none;
   color: inherit;
@@ -214,7 +214,7 @@
 
 .nx-page .s2tagContainerCssClass.select2-container-active .select2-choices,
 .nx-page .s2tagContainerCssClass:hover .select2-choices {
-  background-color: #fff;
+  background-color: $shade-light-0;
   border-color: $shade-medium-10;
 }
 
